add metadata file

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <script>
         // ========== Configuration ==========
         const CONFIG = {
-            dataUrl: 'data/stats.json', // Update this to your API endpoint
+            dataUrl: 'https://objectstorage.me-jeddah-1.oraclecloud.com/n/axzn5twtyt0o/b/manafaco/o/financing/local/SCFMonthlyTarget/scf_monthly_target.json', // Update this to your API endpoint
             refreshInterval: 10 * 60 * 1000 // 10 minutes
         };
 
